<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="fill_parent"
    android:background="@color/bg_normal"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include layout="@layout/menu_account" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvMenuShortcurHome"
                style="@style/slidingmenu_item_bar"
                android:text="@string/menu_home" />

            <TextView
                android:id="@+id/tvMenuShortcutSetting"
                style="@style/slidingmenu_item_bar"
                android:text="@string/menu_settings" />

            <TextView
                android:id="@+id/tvMenuShortcutFeedback"
                style="@style/slidingmenu_item_bar"
                android:text="@string/menu_feedback"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvMenuShortcutUpdateCheck"
                style="@style/slidingmenu_item_bar"
                android:text="@string/menu_checkupdate" />

            <TextView
                android:id="@+id/tvMenuShortcutVersionIntroduction"
                style="@style/slidingmenu_item_bar"
                android:text="@string/menu_version_introduction" />

            <TextView
                android:id="@+id/tvMenuShortcutQuit"
                style="@style/slidingmenu_item_bar"
                android:text="@string/menu_logout" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/menu_item_split_line" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>